[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/cursor_mode_ui.gd" id="1_script"]

[node name="CursorModeUI" type="CanvasLayer" groups=["cursor_mode_ui"]]
layer = 10
script = ExtResource("1_script")

[node name="CursorModeButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 16
text = "üé® Cursor Mode (C)"

[node name="MainToolbar" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 10.0
offset_top = 60.0
offset_right = 180.0
offset_bottom = 310.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainToolbar"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ToolsLabel" type="Label" parent="MainToolbar/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üîß Tools"
horizontal_alignment = 1

[node name="DrawButton" type="CheckBox" parent="MainToolbar/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
button_pressed = true
text = "‚úèÔ∏è Draw"

[node name="SelectButton" type="CheckBox" parent="MainToolbar/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üëÜ Select"

[node name="EraserButton" type="CheckBox" parent="MainToolbar/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üßπ Eraser"

[node name="ToolboxButton" type="CheckBox" parent="MainToolbar/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üß∞ Toolbox"

[node name="Separator" type="HSeparator" parent="MainToolbar/VBoxContainer"]
layout_mode = 2

[node name="ActiveLayerLabel" type="Label" parent="MainToolbar/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üìç Active Layer: 1"
horizontal_alignment = 1

[node name="DrawPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 190.0
offset_top = 60.0
offset_right = 390.0
offset_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="DrawPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DrawLabel" type="Label" parent="DrawPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "‚úèÔ∏è Draw Settings"
horizontal_alignment = 1

[node name="Separator0" type="HSeparator" parent="DrawPanel/VBoxContainer"]
layout_mode = 2

[node name="DrawModeLabel" type="Label" parent="DrawPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üì¶ Physics Type"
horizontal_alignment = 1

[node name="DrawDynamicButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 13
button_pressed = true
text = "üîÑ Dynamic"

[node name="DrawStaticButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "üìå Static"

[node name="Separator1" type="HSeparator" parent="DrawPanel/VBoxContainer"]
layout_mode = 2

[node name="MaterialLabel" type="Label" parent="DrawPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üß± Material"
horizontal_alignment = 1

[node name="WoodButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
button_pressed = true
text = "ü™µ Wood"

[node name="StoneButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ü™® Stone"

[node name="MetalButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "‚öôÔ∏è Metal"

[node name="BrickButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üß± Brick"

[node name="PlasterButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üé® Plaster"

[node name="Separator2" type="HSeparator" parent="DrawPanel/VBoxContainer"]
layout_mode = 2

[node name="BrushShapeLabel" type="Label" parent="DrawPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üñåÔ∏è Brush Shape"
horizontal_alignment = 1

[node name="DrawCircleBrushButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
button_pressed = true
text = "‚ö´ Circle"

[node name="DrawSquareBrushButton" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "‚¨õ Square"

[node name="Separator3" type="HSeparator" parent="DrawPanel/VBoxContainer"]
layout_mode = 2

[node name="DrawBrushSizeLabel" type="Label" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üìè Brush Size: 16"
horizontal_alignment = 1

[node name="DrawBrushSizeSlider" type="HSlider" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
min_value = 15.0
max_value = 64.0
value = 16.0

[node name="Separator4" type="HSeparator" parent="DrawPanel/VBoxContainer"]
layout_mode = 2

[node name="DrawLayerLabel" type="Label" parent="DrawPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üìö Layer"
horizontal_alignment = 1

[node name="DrawLayer1Button" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
button_pressed = true
text = "üìÑ Layer 1 (Front)"

[node name="DrawLayer2Button" type="CheckBox" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üìÑ Layer 2 (Back)"

[node name="DrawShowOtherLayersButton" type="Button" parent="DrawPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 11
toggle_mode = true
button_pressed = true
text = "üëÅ Show Other Layers"

[node name="SelectPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 190.0
offset_top = 60.0
offset_right = 390.0
offset_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="SelectPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SelectLabel" type="Label" parent="SelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üëÜ Select Settings"
horizontal_alignment = 1

[node name="Separator0" type="HSeparator" parent="SelectPanel/VBoxContainer"]
layout_mode = 2

[node name="TransformModeLabel" type="Label" parent="SelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üîß Transform Mode"
horizontal_alignment = 1

[node name="MoveButton" type="CheckBox" parent="SelectPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 13
button_pressed = true
text = "‚ÜîÔ∏è Move"

[node name="ResizeButton" type="CheckBox" parent="SelectPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "‚§° Resize"

[node name="RotateButton" type="CheckBox" parent="SelectPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "üîÑ Rotate"

[node name="EraserPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 190.0
offset_top = 60.0
offset_right = 390.0
offset_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="EraserPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EraserLabel" type="Label" parent="EraserPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üßπ Eraser Settings"
horizontal_alignment = 1

[node name="Separator0" type="HSeparator" parent="EraserPanel/VBoxContainer"]
layout_mode = 2

[node name="BrushShapeLabel" type="Label" parent="EraserPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üñåÔ∏è Brush Shape"
horizontal_alignment = 1

[node name="EraserCircleBrushButton" type="CheckBox" parent="EraserPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
button_pressed = true
text = "‚ö´ Circle"

[node name="EraserSquareBrushButton" type="CheckBox" parent="EraserPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "‚¨õ Square"

[node name="Separator1" type="HSeparator" parent="EraserPanel/VBoxContainer"]
layout_mode = 2

[node name="EraserBrushSizeLabel" type="Label" parent="EraserPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üìè Brush Size: 16"
horizontal_alignment = 1

[node name="EraserBrushSizeSlider" type="HSlider" parent="EraserPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
min_value = 15.0
max_value = 64.0
value = 16.0

[node name="Separator2" type="HSeparator" parent="EraserPanel/VBoxContainer"]
layout_mode = 2

[node name="EraserLayerLabel" type="Label" parent="EraserPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üìö Layer"
horizontal_alignment = 1

[node name="EraserLayer1Button" type="CheckBox" parent="EraserPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
button_pressed = true
text = "üìÑ Layer 1 (Front)"

[node name="EraserLayer2Button" type="CheckBox" parent="EraserPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üìÑ Layer 2 (Back)"

[node name="ToolboxPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 190.0
offset_top = 60.0
offset_right = 390.0
offset_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="ToolboxPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ToolboxLabel" type="Label" parent="ToolboxPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üß∞ Toolbox"
horizontal_alignment = 1

[node name="BoltToolButton" type="CheckBox" parent="ToolboxPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
button_pressed = true
text = "üî© Bolt"

[node name="StringToolButton" type="CheckBox" parent="ToolboxPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üßµ String"

[node name="ElasticToolButton" type="CheckBox" parent="ToolboxPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üé∏ Elastic"

[node name="RodToolButton" type="CheckBox" parent="ToolboxPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üìè Rod"

[node name="Separator" type="HSeparator" parent="ToolboxPanel/VBoxContainer"]
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="ToolboxPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Click on overlapping Layer 1 and Layer 2 objects to place bolts."
autowrap_mode = 3

[node name="PauseButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 170.0
offset_top = 10.0
offset_right = 320.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "‚è∏Ô∏è Pause (P)"

[node name="PauseIndicator" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="PauseLabel" type="Label" parent="PauseIndicator"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚è∏Ô∏è PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TransformModeLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 24
text = "Move (Q to cycle)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentLayerLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 70.0
offset_right = -10.0
offset_bottom = 110.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 20
text = "Layer 1 (Front)"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FlyModeIndicator" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="FlyLabel" type="Label" parent="FlyModeIndicator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.8, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 24
text = "‚úàÔ∏è FLY MODE"
horizontal_alignment = 1
vertical_alignment = 1
